--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width="960" height="600"></canvas>
       <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
+        <!-- <div id="unity-logo"></div> -->
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
         </div>
@@ -64,11 +64,11 @@
         dataUrl: buildUrl + "/Demo1.data",
         frameworkUrl: buildUrl + "/Demo1.framework.js",
         codeUrl: buildUrl + "/Demo1.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        // streamingAssetsUrl: "StreamingAssets",
+        companyName: "Repsoft",
         productName: "Horror game",
         productVersion: "0.1",
-        showBanner: unityShowBanner,
+        // showBanner: unityShowBanner,
       };
 
       // By default Unity keeps WebGL canvas render target size matched with
